--- a/Bureau/devise lundi/event-britemars/app/views/events/_form.html.erb
+++ b/Bureau/devise lundi/event-britemars/app/views/events/_form.html.erb
@@ -22,12 +22,12 @@
   </div>
 
   <div class="field">
-    <%= form.label :place %>
+    <%= form.label :Lieu %>
     <%= form.text_field :place %>
   </div>
 
   <div class="field">
-    <%= form.label :price %>
+    <%= form.label :prix %>
     <%= form.number_field :price %>
   </div>
 
