--- a/Bureau/devise lundi/event-britemars/app/views/events/userpage.html.erb
+++ b/Bureau/devise lundi/event-britemars/app/views/events/userpage.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1> Mes evenements </h1>
+<h1> Mes évènements </h1>
 
 <table>
   <thead>
@@ -22,10 +22,10 @@
         <td><%= event.place %></td>
         <td><%= event.price %></td>
         <td><%= event.creator_id %></td>
-        <td><%= link_to 'Show', event %></td>
+        <td><%= link_to 'Voir', event %></td>
         
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Editer', edit_event_path(event) %></td>
+        <td><%= link_to 'Supprimer', event, method: :delete, data: { confirm: 'Êtes-vous sûr?' } %></td>
      
       </tr>
       
@@ -36,4 +36,4 @@
 
 <br>
 
-<%= link_to 'New Event', new_event_path %>
+<%= link_to 'Nouvel évènement', new_event_path %>
