--- a/Bureau/devise lundi/event-britemars/app/views/events/index.html.erb
+++ b/Bureau/devise lundi/event-britemars/app/views/events/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Events</h1>
+<h1>Évènements</h1>
 
 <table>
   <thead>
@@ -17,7 +17,7 @@
   </thead>
 
   <tbody>
-    <% @events.each do |event| %>
+    <% @events.current.each do |event| %>
       <tr>
         <td><%= event.date %></td>
         <td><%= event.description %></td>
@@ -30,8 +30,11 @@
         <% if current_user == event.creator  %>
         <td><%= link_to 'Editer', edit_event_path(event) %></td>
         <td><%= link_to 'Supprimer', event, method: :delete, data: { confirm: 'Êtes-vous sûr ?' } %></td>
+        <% elsif event.attendees.include? current_user %>
+        <td> Tu participes à cet évènement</td>
        <% else %>
-       <td><%= link_to  "S'inscrire" , event_subscribe_path(event) , method: :post %></td>
+
+       <td><%= link_to  "S'inscrire" , event_path(event.id) %></td>
        
        
       </tr>
@@ -40,7 +43,46 @@
     <% end %>
   </tbody>
 </table>
-
+<br>
+<hr>
 <br>
 
+<h2>Évènements passés</h2>
+<br>
+
+<br>
+<table>
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Description</th>
+      <th>Lieu</th>
+      <th>Prix</th>
+      <th></th>
+      <th></th>
+      <th>Createur de l'évènement</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @events.past.each do |event| %>
+      <tr>
+        <td><%= event.date %></td>
+        <td><%= event.description %></td>
+        <td><%= event.place %></td>
+        <td><%= event.price %></td>
+        <td></td>
+        <td></td>
+        <td><%= User.find(event.creator_id).email %></td>
+        <td><%= link_to 'Voir', event %></td>
+
+        </tr>
+      <% end %>
+
+    
+  </tbody>
+</table>
+
+<br>
 <%= link_to 'Nouvel évènement', new_event_path %>
